# katas

./: .gitignore  Gemfile  README.md
081415/daveshah/: .gitignore  build.gradle  settings.gradle
adder/: README.md
adder/davidhatten/: .gitignore  build.gradle  settings.gradle
adder/mattj/: .gitignore
adder/mattjohnson/: build.gradle  settings.gradle
adder/morgan/: README.md  Rakefile
adder/samjones/: build.gradle  settings.gradle
adder/shah/: .gitignore  README.md  build.gradle  settings.gradle
adder_new_lang/: README.md
adder_new_lang/daveshah/: .gitignore  README.md  project.clj  setup.py
adder_new_lang/davidhatten/: .gitignore  adder.py  testAdder.py
adder_new_lang/dougmorgan/: .gitignore  Readme.md
adder_new_lang/gopenshaw/: .gitignore  README.md  adder.rb
adder_new_lang/michaelgerdes/: adder-test.rkt  adder.rkt
akr_word_wrap/: README.md  word_wrap.rb  word_wrap_spec.rb
akr_word_wrap/byronddelpinal/: word_wrap.rb  word_wrap_spec.rb
bloomfilters/matt-keibler/: CMakeLists.txt
bloomfilters/matt-keibler/src/: BloomFilter.cpp  BloomFilter.h  HashCalculator.cpp  HashCalculator.h  WordFileReader.cpp  WordFileReader.h  main.cpp
bloomfilters/matt-keibler/test/: BloomFilterTest.cpp  HashCalculatorTest.cpp  MockHashCalculator.cpp  MockHashCalculator.h
bloomfilters/samjones/: .eslintrc  README.md  package.json
code/: wordExistsSpec.js  yahtzee.js  yahtzeeSpec.js
data-munging/: README.md
data-munging/daveshah/: build.gradle  settings.gradle
data-munging/sam/: pom.xml
features/step_definitions/: word_chain_steps.rb
gildedRose/: Readme.md
langstons_ant/: README.md
langstons_ant/nathan/: README.md  (+1 more)
lib/: chains_words.rb  reads_dictionary.rb  retrieves_words.rb
spec/: chains_words_spec.rb  reads_dictionary_spec.rb  retrieves_words_spec.rb
trigrams/: README.md
trigrams/samjones/haskellFP/trigrams/: .gitignore  trigrams.cabal
trigrams/samjones/haskellFP/trigrams/src/: Trigrams.hs
trigrams/samjones/haskellFP/trigrams/test/: TrigramSpec.hs
ui_calculator/: README.md
yahtzee/: Readme.md
(+403 files in other folders)
