name:                trigrams
version:             0.1.0.0
synopsis:            Trigram kata - http://codekata.com/kata/kata14-tom-swift-under-the-milkwood/
description:         Please see README.md
homepage:            https://github.com/xDD-CLE/katas/tree/master/trigrams
license:             MIT
license-file:        LICENSE
author:              Sam Jones
maintainer:          sam@samljones.com
copyright:           2016 Sam Jones
category:            Kata
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable trigrams
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trigrams
  default-language:    Haskell2010

test-suite trigrams-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trigrams
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/trigrams
